[tool.poetry]
name = "skeleton-2"
version = "0.1.0"
description = ""
authors = ["hibukki <myselfandfredy@gmail.com>"]
readme = "README.md"
packages = [{include = "skeleton_2"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
